--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-gem"></i>
                     <p class="experiencia-titulo"> <a href="coleccionbasicos.html"></a>Coleccion Basicos</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione culpa necessitatibus in
-                        aliquam, recusandae fuga eaque iste labore veritatis odit temporibus amet deserunt incidunt
-                        aperiam, obcaecati quis illo sint natus?</p>
+                    <p>Si es para un evento de día, ya sea una boda, cumpleaños o cualquier tipo de reunión social, puedes utilizar un maquillaje más elaborado en tonos nudes, cálidos, rosas, o incluso tonos neutros. Siempre compensando el maquillaje y decidiendo cuál quieres que sea el foco de atención. Si quieres otorgar mayor visibilidad a los ojos, los labios deben lucir tonos suaves y viceversa.</p>
                     <div class="badges-contenedor">
                         <button type="button" class="badge btn-secondary"><a href="coleccionbasicos.html">Ver
                                 mas</a></button>
@@ -138,9 +136,7 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-gem"></i>
                     <p class="experiencia-titulo"><a href="coleccionnight.html"></a>Coleccion Night</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione culpa necessitatibus in
-                        aliquam, recusandae fuga eaque iste labore veritatis odit temporibus amet deserunt incidunt
-                        aperiam, obcaecati quis illo sint natus?</p>
+                    <p>El maquillaje de noche se caracteriza por ser más llamativo para compensar la falta de luz, ya que por la noche se produce el efecto contrario a la luminosidad característica del día. Para solucionarlo, el maquillaje de noche se caracteriza por utilizar tonos más llamativos usando técnicas que marquen más el maquillaje y lo carguen ligeramente en comparación con el maquillaje de día.</p>
                     <div class="badges-contenedor">
                         <button type="button" class="badge btn-secondary"><a href="coleccionnight.html">Ver
                                 mas</a></button>
@@ -149,9 +145,7 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-gem"></i>
                     <p class="experiencia-titulo"><a href="contacto.html"></a>Contactanos!</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione culpa necessitatibus in
-                        aliquam, recusandae fuga eaque iste labore veritatis odit temporibus amet deserunt incidunt
-                        aperiam, obcaecati quis illo sint natus?</p>
+                    <p>Como habrás comprobado, las diferencias entre un maquillaje de día y uno de noche son importantes y tienen su explicación y motivo. Así que ya sabes, mi recomendación es que nos contactes y lo dejes en nuestras manos.</p>
                     <div class="badges-contenedor">
                         <button type="button" class="badge btn-secondary"><a href="contacto.html">Ver mas</a></button>
                     </div>
