--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="coco pink">
-    <meta name="keywords" content="contacto, coco pink, informacion, makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
+    <meta name="keywords"
+        content="contacto, coco pink, informacion, makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
     <meta name="descripcion." content="OFRECEMOS SERVICIO PERSONALIZADO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
     TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
     OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
@@ -93,28 +94,40 @@
                 <div class="columna col-12 col-md-6">
                     <div class="badges-contenedor">
                         <div>
-                            <p class="experiencia-titulo">CONTACTANOS!</p>
-                            <form class="container">
-                                <div class="form-group">
-                                    <label for="usr">Nombre:</label>
-                                    <input type="text" class="form-control" id="usr">
-                                </div>
-                                <div class="form-group">
-                                    <label for="usr">Apellido:</label>
-                                    <input type="text" class="form-control" id="usr">
-                                </div>
-                                <div class="form-group">
-                                    <label for="comment">Mensaje:</label>
-                                    <textarea class="form-control" rows="5" id="comment"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                            </form>
+                            <div class="form_contact">
+                                <form class="form_box" id="formulario">
+                                    <label  for="Datos">Nombre </label>
+                                    <input  type="Nombre" placeholder="introduza su nombre" id="nombre">
+                                    <label  for="Datos">Apellido</label>
+                                    <input type="Nombre" placeholder="introduza su apellido 
+                                    " id="apellido">
+                                    <br>
+                                    <label  for="mail"> E - mail  </label>
+                                    <input  type="correo" placeholder="example@gamil.com" id="correo">
+                                    <br>
+                                    <label  for="telefono">Teléfono</label>
+                                    <input  type="telefono" placeholder="ej +54 111111" id="telefono">
+                                    <br>
+                                    <label  for="mensaje">Mensaje</label>
+                                    <textarea  cols="50" rows="20" id="mensaje"></textarea>
+                                    <br>
+                                    <button >Enviar</button>
+                                </form>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </article>
+
+
+
+
+    
+
+
 
 
     <section class="seccion-clara cuerpo align-items-stretch">
@@ -163,6 +176,8 @@
                 <a href="#"><i class="bi bi-envelope"></i></a>
             </div>
 
+
+
             <div>Creado por Coco Pink (2023) &#169;</div>
         </footer>
 
@@ -177,6 +192,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
             integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
             crossorigin="anonymous"></script>
+        <script src="main.js"></script>
 
 </body>
 
