--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -39,11 +36,11 @@
     <!--barra de navegacion -->
     <div>
         <nav class="navbar navbar-expand-md navbar-light navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-toggler"
+                aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggler">
+            <div class="collapse navbar-collapse" id="navbar-toggler">
                 <a class="navbar-brand" href="index.html">
                     <i class="bi-bi bi bi-gem"></i>
                 </a>
@@ -90,6 +87,7 @@
         </div>
 
         <article class="experiencia">
+            <h2>rikiiiiiiiii</h2>
             <div class="container-fluid text-center">
                 <div class="row">
                     <div class="columna1 col-12 col-md-6">
@@ -97,8 +95,7 @@
                             vistes. Tu
                             imagen refleja la mujer que eres. Muestra tu potencial. Brilla e irradia luz</p> <br>
                         <div class="badges-contenedor">
-                            <button type="button" class="badge btn-secondary"><a href="coleccionbasicos.html">Ver
-                                    mas</a></button>
+                            <a class="button-link" href="coleccionbasicos.html">Ver más</a>
                         </div>
                     </div>
 
@@ -108,20 +105,16 @@
                                 Exclusive Collection</span> <br> Conocé nuestros elegidos en nuestra coleccion
                         </p> <br>
                         <div class="badges-contenedor">
-                            <button type="button" class="badge btn-secondary"><a href="coleccionnight.html">Ver
-                                    mas</a></button>
+                            <a class="button-link"  href="coleccionnight.html">Ver más</a>
                         </div>
-
                     </div>
-
-
-
                 </div>
             </div>
         </article>
     </main>
 
     <section class="experiencia seccion-gris">
+        <h2></h2>
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="columna col-12 col-md-4">
@@ -129,8 +122,7 @@
                     <p class="experiencia-titulo"> <a href="coleccionbasicos.html"></a>Coleccion Basicos</p>
                     <p>Si es para un evento de día, ya sea cualquier tipo de reunión social, puedes utilizar un maquillaje más elaborado en tonos nudes o incluso tonos neutros. Siempre compensando el maquillaje y decidiendo cuál quieres que sea el foco de atención.</p>
                     <div class="badges-contenedor">
-                        <button type="button" class="badge btn-secondary"><a href="coleccionbasicos.html">Ver
-                                mas</a></button>
+                        <a class="button-link-secundario" href="coleccionbasicos.html">Ver más</a>
                     </div>
                 </div>
                 <div class="columna col-12 col-md-4">
@@ -138,8 +130,7 @@
                     <p class="experiencia-titulo"><a href="coleccionnight.html"></a>Coleccion Night</p>
                     <p>El maquillaje de noche se caracteriza por ser más llamativo para compensar la falta de luz, ya que por la noche se produce el efecto contrario a la luminosidad característica del día.</p>
                     <div class="badges-contenedor">
-                        <button type="button" class="badge btn-secondary"><a href="coleccionnight.html">Ver
-                                mas</a></button>
+                        <a class="button-link-secundario" href="coleccionnight.html">Ver más</a>
                     </div>
                 </div>
                 <div class="columna col-12 col-md-4">
@@ -147,7 +138,7 @@
                     <p class="experiencia-titulo"><a href="contacto.html"></a>Contactanos!</p>
                     <p>Como habrás comprobado, las diferencias entre un maquillaje de día y uno de noche son importantes y tienen su explicación y motivo. Así que ya sabes, mi recomendación es que nos contactes y lo dejes en nuestras manos.</p>
                     <div class="badges-contenedor">
-                        <button type="button" class="badge btn-secondary"><a href="contacto.html">Ver mas</a></button>
+                        <a class="button-link-secundario" href="contacto.html">Ver más</a>
                     </div>
                 </div>
 
@@ -171,7 +162,6 @@
     </footer>
 
 
-  
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
